# nrf52833_shenanigans

./: Cargo.toml
.cargo/: config.toml
src/: glorified_notepad.rs  main.rs
